@@ -1,4 +1,4 @@
-GimpBrushThumbs is a thumbnail generator for all KDE file managers (konqueror, dolphin, ...)
+GimpResourcesThumbnailer is a thumbnail generator for all KDE file managers (konqueror, dolphin, ...)
 
 To install, follow these steps (inside this folder):
 
