@@ -1,8 +1,0 @@
-[Desktop Entry]
-Type=Service
-Name=Gimp Resource Thumbnailer
-X-KDE-ServiceTypes=ThumbCreator
-MimeType=image/x-gimp-brush;image/x-gimp-brush-animated;image/x-gimp-pattern;image/x-adobe-photoshop-brush
-X-KDE-Library=gimpbrushthumbnail
-CacheThumbnail=true
-IgnoreMaximumSize=true
