@@ -1,3 +1,6 @@
+2009-12-27 GimpResourcesThumbnailer 1.0.7
+    * name change
+
 2009-12-27 GimpBrushThumbs 1.0.7
     * fixed a memory leak
 
